--- a/Home/home.html
+++ b/Home/home.html
@@ -13,7 +13,7 @@
         <ul class="nav-links">
             <li  ><a href="./home.html" class="h" >Home</a></li>
             <li><a href="../categories/cat.html">Categories</a></li>
-            <li><a href="./under.html">Help</a></li>
+            <li><a href="./under/under.html">Help</a></li>
             
         </ul>
         <div class="user">
